<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.NeedHelpFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/main_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/textColorBlack"
                android:layout_margin="10dp"
                android:textStyle="bold"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardPreventCornerOverlap="false"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                >
                <Spinner
                    android:id="@+id/sp_main_address"
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:text="@string/address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/textColorBlack"
                android:layout_margin="10dp"
                android:textStyle="bold"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardPreventCornerOverlap="false"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                >
                <EditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="16sp"
                    android:inputType="textMultiLine"
                    android:hint="@string/address_hint"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/textColorGrey"
                    android:textColor="@color/textColorBlack"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:text="@string/message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/textColorBlack"
                android:layout_margin="10dp"
                android:textStyle="bold"
                />
            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardPreventCornerOverlap="false"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                >
                <EditText
                    android:id="@+id/edt_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="16sp"
                    android:inputType="textMultiLine"
                    android:backgroundTint="@color/white"
                    android:hint="@string/message_hint"
                    android:textColorHint="@color/textColorGrey"
                    android:textColor="@color/textColorBlack"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:text="@string/contact_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/textColorBlack"
                android:layout_margin="10dp"
                android:textStyle="bold"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardPreventCornerOverlap="false"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                >
                <EditText
                    android:id="@+id/edt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="16sp"
                    android:inputType="phone"
                    android:backgroundTint="@color/white"
                    android:hint="@string/mobile_no_hint"
                    android:textColorHint="@color/textColorGrey"
                    android:textColor="@color/textColorBlack"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardPreventCornerOverlap="false"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                >
                <EditText
                    android:id="@+id/edt_mobile_other"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:inputType="phone"
                    android:backgroundTint="@color/white"
                    android:hint="@string/another_no_hint"
                    android:textColorHint="@color/textColorGrey"
                    android:textColor="@color/textColorBlack"
                    />
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btn_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_post_text"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@drawable/btn_shape_rounded"
                />
        </LinearLayout>

    </ScrollView>
</FrameLayout>