<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.DoHelpFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:hint="@string/search_location_hint">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/search_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:textSize="18sp"
                    android:inputType="text"
                    android:visibility="gone"
                    android:textColor="@color/textColorBlack"
                    android:drawableLeft="@drawable/search_icon"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardPreventCornerOverlap="false"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:padding="6dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp">
                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:textColor="@color/textColorBlack"
                            android:text="Dhaka"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textColor="@color/textColorGrey"
                            android:text="04-04-2020"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp">
                        <TextView
                            android:id="@+id/desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorBlack"
                            android:text="01778202103"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/btn_details"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/details_text"
                            android:background="@drawable/left_corner_rounded"
                            android:layout_margin="2dp"
                            android:textColor="@color/textColorBlack"
                            android:layout_weight="1"/>
                        <Button
                            android:id="@+id/btn_contact"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_text"
                            android:textColor="@color/textColorBlack"
                            android:background="@drawable/right_corner_rounded"
                            android:layout_margin="2dp"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <ProgressBar
                android:id="@+id/progressBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"
                />
        </LinearLayout>
    </ScrollView>
</FrameLayout>